# RESUME-MAKER

./: .gitignore  =0.40.0  README.md  main.py  package-lock.json  package.json  requirements.txt  test.py
.claude/: settings.local.json
docs/: APPLY_SYSTEM_PLAN.md  sample_analysis.md
docs/latex/: main.tex
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
prompt/: tool1_prompt.txt  tool2_eval_prompt.txt  tool2_prompt.txt  tool3_prompt.txt  tool4_prompt.txt
scripts/: dummy.py  main.py  main.tex  mcp_server.py  resume_crew.py  resume_formatter.py  tmp_replace_block.py
test-apply/: .gitignore  ARCHITECTURE.md  CAPTCHA_SETUP.md  CLAUDE_POWERED.md  COMPLETE_EXTRACTOR.md  DEBUG_GUIDE.md  EXTRACTION_UPGRADE.md  LICENSE  NEW_APPROACH.md  PROJECT_SUMMARY.md  README.md  SETUP_CLAUDE.md  SETUP_GUIDE.md  STRUCTURE.txt  TEST_COMPLETE.md  V1_REDESIGN.md  WINDOWS_SETUP.md  analyze_run.py  analyze_universal_extraction.py  config.example.yaml  example_usage.py  pyproject.toml  quick_setup.py  requirements.txt  run.bat  setup.bat  star.txt  test_extraction.bat  verify_setup.py
test-apply/.claude/: settings.local.json
test-apply/apply/: __init__.py  __main__.py  actor.py  brain.py  browser.py  captcha_solver.py  claude_brain.py  config.py  decision.py  detect.py  executor.py  logger.py  planner.py
test-apply/apply/extractors/: __init__.py  complete_universal.py  dom.py  network.py  pull_everything.py  text.py  universal.py
tests/: __init__.py  test_parser.py  test_text_utils.py
tools/: tool1.py  tool2.py  tool3.py  tool4.py
(+37 files in other folders)
