[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_backend"

[project]
name = "apply"
version = "0.1.0"
description = "Automated job application tool using Playwright"
requires-python = ">=3.9"
dependencies = [
    "playwright>=1.40.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
